SEO and accebility

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" sizes="16x16" href="/public/favicon/16x16.png" type="image/png">
+    <link rel="shortcut icon" sizes="32x32" href="/public/favicon/32x32.png" type="image/png">
+    <link rel="shortcut icon" sizes="48x48" href="/public/favicon/48x48.png" type="image/png">
+    <link rel="shortcut icon" sizes="64x64" href="/public/favicon/64x64.png" type="image/png">
+    <link rel="shortcut icon" sizes="128x128" href="/public/favicon/128x128.png" type="image/png">
+    <link rel="shortcut icon" sizes="512x512" href="/public/favicon/512x512.png" type="image/png">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seaway</title>
+    <link rel="canonical" href="https://seaway-yacht.vercel.app/">
+    <meta name="description" content="Descubre y obten los mejores yates del mercado actual">
+    <meta name="keywords" content="yates de lujo, yates, lujo, lifestyle, vida de lujo, moda, moderno, oceano, barcos, lanchas, cruceros, navegar en yate, navegación con yates, paseos en yates, alquiler de barcos, alquiler de yates, alquiler de lanchas, compra de barcos, compra de yates, compra de lanchas, comprar barcos, barcos, cruceros">
+    <meta http-equiv="Content-Language" content="es">
+    <meta property="og:title" content="Seaway - Yates de lujo">
+<meta property="og:description" content="Compra los mejores yates de lujo en un solo lugar">
+<meta property="og:image" content="/public/images/carousel/3.avif">
+<meta property="og:url" content="https://seaway-yacht.vercel.app/">
+<meta property="og:type" content="website">
+
   </head>
   <body>
     <div id="root"></div>
